Add downloads column

--- a/template/handsontable.html
+++ b/template/handsontable.html
@@ -106,6 +106,12 @@
                     width: 100,
                 },
                 {
+                    title: 'Downloads (average per app update), from F-Droid.org only',
+                    type: 'numeric',
+                    data: 'fdroid_downloads',
+                    width: 100,
+                },
+                {
                     title: 'Updated',
                     type: 'date',
                     data: 'lastupdated',
