--- a/template/handsontable.html
+++ b/template/handsontable.html
@@ -56,7 +56,8 @@
             } else if (repo == "IzzyOnDroid") {
                 url = 'https://apt.izzysoft.de/fdroid/index/apk/' + pkg;
             }
-
+            Handsontable.dom.addClass(td, 'htNoWrap');
+            
             if (url != "") {
                 const a = document.createElement('a');
                 a.innerHTML = rowData['name'];
@@ -80,6 +81,23 @@
             return td;
         }
 
+        const numberRenderer = (_instance, td, _row, _col, _prop, value) => {
+            if (typeof value === 'number') {
+                const locale = navigator.language || 'en-US';
+                const formatter = new Intl.NumberFormat(locale, {
+                    minimumFractionDigits: 0,
+                    maximumFractionDigits: 2,
+                });
+                td.textContent = formatter.format(value);
+                Handsontable.dom.addClass(td, 'htRight');
+                Handsontable.dom.addClass(td, 'htNumeric');
+                return td;
+            } else {
+                td.innerText = value;
+            }
+        }
+
+
         const container = document.querySelector('#table');
 
         const hot = new Handsontable(container, {
@@ -101,14 +119,20 @@
                 },
                 {
                     title: 'Stars',
-                    type: 'numeric',
+                    renderer: numberRenderer,
                     data: 'stars',
                     width: 100,
                 },
                 {
-                    title: 'Downloads (average per app update), from F-Droid.org only',
-                    type: 'numeric',
+                    title: 'F-Droid Downloads (Average per App Update)',
+                    renderer: numberRenderer,
                     data: 'fdroid_downloads',
+                    width: 100,
+                },
+                {
+                    title: 'Google Downloads (Total)',
+                    renderer: numberRenderer,
+                    data: 'google_downloads',
                     width: 100,
                 },
                 {
