--- a/template/handsontable.html
+++ b/template/handsontable.html
@@ -178,6 +178,12 @@
                     width: 200,
                 },
                 {
+                    title: 'Minimum Android Version',
+                    type: 'numeric',
+                    data: 'minimum',
+                    width: 100,
+                },
+                {
                     title: 'Language',
                     type: 'text',
                     data: 'language',
